package com.caibowen.prma.api.proto;

import public "StackTrace.proto";

message ExceptionPO {
    required uint64 id = 1;
    required string exception_name = 2;
    optional string exception_msg = 3;
    repeated StackTracePO stacktraces = 4;
}